[gd_scene load_steps=12 format=3 uid="uid://dgbigves4a7ae"]

[ext_resource type="Script" path="res://ui/text box/text_box.gd" id="1_5mche"]
[ext_resource type="Texture2D" uid="uid://dqhlkduc3w17e" path="res://assets/sprites/speach_bubble.png" id="2_jaenm"]
[ext_resource type="Texture2D" uid="uid://bhqrf5ehh4u1n" path="res://assets/sprites/tail.png" id="3_fsng4"]
[ext_resource type="FontFile" uid="uid://c865kgrmt1tsb" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_l3vuy"]
[ext_resource type="Texture2D" uid="uid://bn80tlkwb5ydl" path="res://assets/sprites/next_line.png" id="4_ogi5l"]
[ext_resource type="AudioStream" uid="uid://b47a657271bp2" path="res://sound/sfx/speech.wav" id="6_485i1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6uakt"]
atlas = ExtResource("4_ogi5l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xafr0"]
atlas = ExtResource("4_ogi5l")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_78eym"]
atlas = ExtResource("4_ogi5l")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dbjg"]
atlas = ExtResource("4_ogi5l")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_os6vd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uakt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xafr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78eym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dbjg")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="text_box" type="MarginContainer"]
top_level = true
light_mask = 2
visibility_layer = 2
z_index = 20
offset_right = 39.0
offset_bottom = 39.0
scale = Vector2(0.4, 0.4)
script = ExtResource("1_5mche")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_jaenm")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Control" type="Control" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect/Control"]
position = Vector2(19.5, 41)
texture = ExtResource("3_fsng4")

[node name="Control2" type="Control" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="NextLineIndicator" type="AnimatedSprite2D" parent="NinePatchRect/Control2"]
position = Vector2(-5, -6)
sprite_frames = SubResource("SpriteFrames_os6vd")
autoplay = "default"
frame_progress = 0.0085055

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.912289, 0.912289, 0.912289, 1)
theme_override_fonts/font = ExtResource("3_l3vuy")
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="audio_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_485i1")

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
